# IPC-Benchmark

./: CMakeLists.txt  Makefile  README.md
source/: CMakeLists.txt
source/common/: argument_parse.c  argument_parse.h  benchmark.c  benchmark.h  process.c  process.h  signals.c  signals.h
source/pipe/: Makefile  README  pipe  pipe.c
source/shm/: Makefile  client  client.c  server  server.c  shm  shm.c
source/socket/: .server.c.swp  server.c
